# gdiff-th

./: gdiff-th.cabal  stack.yaml
examples/: CompareVersions.hs  Expr.hs  Utils.hs
src/Data/Generic/Diff/TH/: Conversion.hs  Internal.hs  Specialize.hs
