Name:                gdiff-th
Version:             0.1.0.8

Synopsis:            Generate gdiff GADTs and Instances.
Description:  
    Generate gdiff GADTs and Instances. 
    .
    There are examples in the @examples@ directory of the cabal tarball. Also the main module includes an example in the documentation.
    .
    * 0.1.0.4 : Builds on GHC 7.6.1, 7.4.2, and 7.0.3
    .
    * 0.1.0.5 : Doc fixes.

License:             BSD3
License-file:        LICENSE
Author:  Jonathan Fischoff            
Maintainer:          jonathangfischoff@gmail.com
Copyright: (c) 2012-2013 Jonathan Fischoff           
Category:            Generics, Testing

Build-type:          Simple
    
Extra-source-files: examples/Expr.hs
                    examples/New.hs
                    examples/Old.hs
                    examples/CompareVersions.hs
                    examples/Parser.hs
                    examples/Utils.hs
                    
Cabal-version:       >=1.22

homepage:    https://github.com/jfischoff/gdiff-th
bug-reports: https://github.com/jfischoff/gdiff-th/issues
tested-with: GHC == 7.6.3

source-repository head
    type:     git
    location: git://github.com/jfischoff/gdiff-th.git

Flag buildCompareVersions
  description: Build the source diff example
  default:     False

Library
  Hs-Source-Dirs: src
 
  Exposed-modules: Data.Generic.Diff.TH
  
  Other-modules: Data.Generic.Diff.TH.Conversion, 
                 Data.Generic.Diff.TH.Internal,
                 Data.Generic.Diff.TH.Types
                 Data.Generic.Diff.TH.Specialize
  
  Build-depends: base >= 4.0 && <= 6.0,
                 gdiff,
                 th-expand-syns,
                 uniplate,
                 containers,
                 mtl,
                 template-haskell
  ghc-options: -Wall
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
                     , QuasiQuotes
                     , TupleSections
                     , RecordWildCards
                     , DeriveDataTypeable
                 
Test-Suite tests
    Hs-Source-Dirs: src, tests
    type:       exitcode-stdio-1.0
    main-is:    Main.hs
    build-depends:   base >= 4.0 && <= 6.0,
                     template-haskell,
                     gdiff,
                     th-expand-syns,
                     uniplate,
                     containers,
                     mtl
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell

Executable CompareVersions
  Hs-Source-Dirs: examples
  main-is: CompareVersions.hs
  Build-depends: base >= 4.0 && <= 6.0
               , template-haskell
               , gdiff
               , th-expand-syns
               , uniplate
               , containers
               , mtl
               , haskell-src-exts

  If flag(buildCompareVersions)
    Build-depends: gdiff-th
  Else
    Buildable: False
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
  ghc-options: -fprof-auto -threaded -rtsopts

Executable ExprExample
  Hs-Source-Dirs: examples
  main-is: Expr.hs
  Build-depends: base >= 4.0 && <= 6.0
               , gdiff
               , gdiff-th
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
  ghc-options: -ddump-splices
